--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -83,7 +83,7 @@ and (max-width: 1023px) {
 @media only screen 
 and (min-width: 1024px) {
     .navbar__container {
-        justify-content: space-around;
+        justify-content: space-between;
         width: 100%;
     }
 
