--- a/src/components/ProductGrid/ProductGrid.css
+++ b/src/components/ProductGrid/ProductGrid.css
@@ -18,9 +18,9 @@
 
 .productGrid__filterContainer {
     width: 90%;
-    /* height: 100px; */
+    padding: auto;
+    /* margin: 0 0 0 auto; */
     margin: auto;
-
 
     display: flex;
     flex-direction: row;
@@ -67,8 +67,8 @@ and (min-width: 1024px) {
     }
 
     .productGrid__filter {
-        width: 20%; 
-        
+        width: 25%; 
+        margin: 25px auto 25px 0;
     }
 
 }
